--- a/Quiz.App/Quiz.Core/Quiz.Core.csproj
+++ b/Quiz.App/Quiz.Core/Quiz.Core.csproj
@@ -5,4 +5,8 @@
     <ImplicitUsings>disable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\" />
+  </ItemGroup>
+
 </Project>
