--- a/Quiz.App/Quiz.Api/appsettings.json
+++ b/Quiz.App/Quiz.Api/appsettings.json
@@ -6,5 +6,5 @@
     }
   },
   "AllowedHosts": "*",
-  "DB": "Server=.;Database=Quiz_test_4;Trusted_Connection=True;Encrypt=False"
+  "DB": "Server=.;Database=quiz_v0;Trusted_Connection=True;Encrypt=False"
 }
