--- a/Quiz.App/Quiz.Domain/Quiz.Domain.csproj
+++ b/Quiz.App/Quiz.Domain/Quiz.Domain.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Services\" />
+    <ProjectReference Include="..\Quiz.Infrastructure\Quiz.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
