--- a/Quiz.App/Quiz.Api/Quiz.Api.csproj
+++ b/Quiz.App/Quiz.Api/Quiz.Api.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Quiz.Core\Quiz.Core.csproj" />
+    <ProjectReference Include="..\Quiz.Domain\Quiz.Domain.csproj" />
     <ProjectReference Include="..\Quiz.Infrastructure\Quiz.Infrastructure.csproj" />
   </ItemGroup>
 
