--- a/Quiz.App/Quiz.Domain/Quiz.Domain.csproj
+++ b/Quiz.App/Quiz.Domain/Quiz.Domain.csproj
@@ -9,4 +9,8 @@
     <ProjectReference Include="..\Quiz.Infrastructure\Quiz.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
 </Project>
