--- a/Quiz.App/Quiz.Api/Quiz.Api.csproj
+++ b/Quiz.App/Quiz.Api/Quiz.Api.csproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\Quiz.Infrastructure\Quiz.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ExportedFiles\" />
+  </ItemGroup>
+
 </Project>
