--- a/Quiz.App/Quiz.Api/appsettings.json
+++ b/Quiz.App/Quiz.Api/appsettings.json
@@ -1,10 +1,5 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
+  "ExportDirectory": "ExportedFiles",
   "AllowedHosts": "*",
   "DB": "Server=.;Database=quiz_v0;Trusted_Connection=True;Encrypt=False"
 }
