--- a/Quiz.App/Quiz.Domain/Quiz.Domain.csproj
+++ b/Quiz.App/Quiz.Domain/Quiz.Domain.csproj
@@ -1,16 +1,18 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>net8.0</TargetFramework>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <Nullable>enable</Nullable>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\Quiz.Infrastructure\Quiz.Infrastructure.csproj" />
-  </ItemGroup>
+    <ItemGroup>
+      <ProjectReference Include="..\Quiz.Core\Quiz.Core.csproj" />
+      <ProjectReference Include="..\Quiz.Infrastructure\Quiz.Infrastructure.csproj" />
+    </ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-  </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    </ItemGroup>
 
 </Project>
